[package]
name = "redox"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["serde"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true