[package]
name = "redox"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
config = { version = "0.15.19", features = ["json"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = { version = "0.30.0", features = ["serde"] }
ratatui-textarea = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
